kubernetes/apps/services/it-tools/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stirling-pdf
  annotations:
    external-dns/is-public: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:hammer-wrench
    hajimari.io/group: services
    hajimari.io/appName: IT-Tools
    hajimari.io/description: "A collection of tools for IT professionals. Encryption and decryption of files, QR code generation, and more."
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    # traefik.ingress.kubernetes.io/router.middlewares: "networking-chain-cloudflare-secure-forwardauth@kubernetescrd"

spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "tools.${SECRET_DOMAIN}"
      secretName: "tools.${SECRET_DOMAIN//./-}-prod-tls"
  rules:
    - host: tools.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: it-tools
                port:
                  number: 8080
